Update default upgrade